--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,82 @@
-.App {
-  text-align: center;
+.container {
+  height: auto;
+  width: 600px;
+  background: #fefefe;
+  margin: auto;
+  margin-top: 40px;
+  padding-bottom: 20px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px -1px rgb(142 142 142);
+}
+.task {
+  height: auto;
+  width: 86%;
+  margin: 10px;
+  margin-left: 30px;
+  background: rgb(231, 231, 231);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.task.reminder {
+  border-left: 5px solid green;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.day {
+  padding-left: 10px;
+  margin: 0px;
+  height: 25px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.content {
+  padding: 10px;
+  margin: 0px;
+  display: flex;
+  justify-content: space-between;
+}
+.add-form {
+  height: auto;
+  width: 86%;
+  margin-left: 30px;
+}
+.form-control {
+  height: auto;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.form-control label {
+  padding: 5px;
+  font-size: 20px;
+  font-family: sans-serif;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form-control input {
+  border: none;
+  margin: 8px;
+  padding: 7px;
+  border-radius: 5px;
+  background: #f4f4f4;
+}
+.form-control-check {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+.form-control-check label {
+  width: 50%;
+}
+.btn-block {
+  width: 86%;
+  margin: 10px;
+  margin-left: 35px;
+  background: black;
+  color: #fff;
+}
+.footer {
+  text-align: center;
+  margin-top: 30px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.about {
+  margin-left: 40px;
+}
+.about h4 {
+  margin-bottom: 10px;
 }
